[package]
name = "chaum-pederson-zkp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2.15"

[build-dependencies]
tonic-build = "0.9"

# [[bin]]
# name = "server"
# path = "src/server.rs"

# [[bin]]
# name = "client"
# path = "src/client.rs"